--- a/config_transformer_eff.cfg
+++ b/config_transformer_eff.cfg
@@ -1,6 +1,6 @@
 [paths]
-train = "nerfr_train.spacy"
-dev = "nerfr_dev.spacy"
+train = "/home/pgajo/working/food/TASTEset/nerfr_train.spacy"
+dev = "/home/pgajo/working/food/TASTEset/nerfr_dev.spacy"
 vectors = null
 init_tok2vec = null
 
@@ -11,7 +11,7 @@ seed = 0
 [nlp]
 lang = "en"
 pipeline = ["transformer","ner"]
-batch_size = 128
+batch_size = 256
 disabled = []
 before_creation = null
 after_creation = null
@@ -50,7 +50,7 @@ set_extra_annotations = {"@annotation_setters":"spacy-transformers.null_annotati
 
 [components.transformer.model]
 @architectures = "spacy-transformers.TransformerModel.v3"
-name = "roberta-base"
+name = "bert-base-multilingual-cased"
 mixed_precision = false
 
 [components.transformer.model.get_spans]
@@ -92,8 +92,8 @@ gpu_allocator = ${system.gpu_allocator}
 dropout = 0.1
 patience = 1600
 max_epochs = 0
-max_steps = 20000
-eval_frequency = 200
+max_steps = 5000
+eval_frequency = 100
 frozen_components = []
 annotating_components = []
 before_to_disk = null
@@ -102,8 +102,8 @@ before_update = null
 [training.batcher]
 @batchers = "spacy.batch_by_padded.v1"
 discard_oversize = true
-size = 2000
-buffer = 256
+size = 4000
+buffer = 512
 get_length = null
 
 [training.logger]
