transformer ner model

--- a/base_config_transformer.cfg
+++ b/base_config_transformer.cfg
@@ -3,8 +3,8 @@
 # you can run spacy init fill-config to auto-fill all default settings:
 # python -m spacy init fill-config ./base_config.cfg ./config.cfg
 [paths]
-train = nerfr_train.spacy
-dev = nerfr_dev.spacy
+train = /home/pgajo/working/food/TASTEset/nerfr_train.spacy
+dev = /home/pgajo/working/food/TASTEset/nerfr_dev.spacy
 vectors = null
 [system]
 gpu_allocator = "pytorch"
