--- a/base_config_transformer.cfg
+++ b/base_config_transformer.cfg
@@ -1,10 +1,9 @@
-
 # This is an auto-generated partial config. To use it with 'spacy train'
 # you can run spacy init fill-config to auto-fill all default settings:
 # python -m spacy init fill-config ./base_config.cfg ./config.cfg
 [paths]
-train = /home/pgajo/working/food/TASTEset/nerfr_train.spacy
-dev = /home/pgajo/working/food/TASTEset/nerfr_dev.spacy
+train = null
+dev = null
 vectors = null
 [system]
 gpu_allocator = "pytorch"
